topics panel added, on scroll flickering fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
@@ -1,3 +1,6 @@
+.on-scroll-padding{
+    padding-top:345px;
+}
 .tab-panel-container {
     margin-top: 25px; 
     position: relative;
